--- a/app/templates/Candidate/candidate_edit.html
+++ b/app/templates/Candidate/candidate_edit.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'  %}
 {% load static %}
 
-{% block 'title' %}    Registration Form {% endblock  %}
+{% block 'title' %}  User Edit Form {% endblock  %}
       {% block 'style' %}
     <style>
         *{
@@ -14,22 +14,20 @@
         }
         body {
             width: 100%;
-            height: 100vh;
+            height:100%;
            overflow-x: hidden;
            position: absolute;
            justify-content: center;
         }
         .container {
           
-           min-height: 300px;
             position: relative;
             min-width: 500px;
-            max-width: 600px;
             width: 80%;
             border-radius: 16px;
             padding: 30px;
-            margin: 2% 30% ;
-            margin-left: auto;
+            margin:50px 100px ;
+            margin-left: 13%;
             background-color: wheat;
             /* box-shadow: 25px 25px 75px rgba(0,0,0,0.25),
             10px 10px 70px rgba(0,0,0,0.25),
@@ -55,11 +53,10 @@
             background: cornflowerblue;
         } */
         .container #form {
-            /* background-color: #155724; */
-            min-height: 400px;
+            min-height: 500px;
              position:relative; 
             color:white;
-          
+            margin-top: 1rem;
         }
         .container #form .title {
             display: block;
@@ -199,7 +196,7 @@
         font-size: 1.3rem;
         color: rgb(241, 32, 17);
        }
-      .container #form textarea {
+       .container #form textarea {
             cursor: pointer;
             flex-wrap: wrap;
             height: 40px;
@@ -219,27 +216,9 @@
             justify-content: space-between;
             color:cornflowerblue;
             font-size: 1.3rem;
-       } 
-       /* Success message */
-.alert-success {
-    color: #155724;  /* Text color */
-    background-color: #d4edda;  /* Background color */
-    border-color: #c3e6cb;  /* Border color */
-}
+       }
 
-/* Error message */
-.alert-error {
-    font-size: 1.5rem;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    font-weight: lighter;
-    height: 40px;
-    color: #ff0820;  /* Text color */
-    background-color: #f8d7da;  /* Background color */
-    border-color: #f5c6cb;  /* Border color */
-}
-    
+     
 @media  screen and ( max-width: 800px)  {
      .input-fields{
         display:inline-flex;
@@ -295,86 +274,66 @@
 
     {% block 'content' %}
     <div class="container">
-        <header class="header">Registration</header>
+        <header class="header">User Edit Form</header>
 
-             {% if messages %}
-            {% for message in messages %}
-          
-                <div class="alert {% if message.tags == 'success' %}alert-success{% elif message.tags == 'error' %}alert-error{% endif %}">
-                    {{ message }}
-                </div> 
-                
-            {% endfor %}
-        {% endif %} 
-        <form id="form" action="{% url 'candidate_registration'%}" method = "POST" >
+        <form id="form" action="" method = "POST" >
             {% csrf_token %}
-            <div class="form first"> <span class="title"></span>
+            <div class="form first"> <span class="title">Personal Details</span>
                    
                 <div class="details personal">
-                        
-                            <div class="fields">
-                                <div class="input-fields">
-                                        <label for="">Full Name <em>*</em></label>
-                                        {{ form_data.first_name }}
-                                        {% comment %} <input type="text" placeholder="Enter Your First Name" > {% endcomment %}
-                                </div>
-                            </div> 
-
-                            <div class="fields">
-                                <div class="input-fields">
-                                    <label for="">Username <em>*</em></label>
-                                        {{ form_data.username }}
-                                    {% comment %} <input type="text" placeholder="Enter Your Last Name" > {% endcomment %}
-                                </div>
-                        </div> 
-
-                            <div class="fields">
-                                <div class="input-fields">
-                                    <label for="">Email <em>*</em></label>
-                                        {{ form_data.email }}
-                                    {% comment %} <input type="email" placeholder=" Your birth Email " > {% endcomment %}
-                                </div>
+                   
+                    <div class="fields">
+                          <div class="input-fields">
+                                <label for="">Full Name <em>*</em></label>
+                                {{ form_data.first_name }}
+                                {% comment %} <input type="text" placeholder="Enter Your First Name" > {% endcomment %}
                           </div>
-
-                        <div class="fields">
-                                <div class="input-fields">
-                                    <label for="">Password <em>*</em></label>
-                                        {{ form_data.password1 }}
-                                        <span class="helper-text">(Password does not contain any word from your name,username and email.)</span>
-                                    {% comment %} <input type="password" placeholder=" Password" > {% endcomment %}
-                                </div>
-                        </div>
-            
-                    <div class="fields">
-                        <div class="input-fields">
-                                <label for="">Confirm Password <em>*</em></label>
-                                    {{ form_data.password2 }}
-                                {% comment %} <input type="text" placeholder=" Confirm Password" > {% endcomment %}
-                        </div>
-                    </div>
-
-                    <div class="fields">
-                        <div class="input-fields">
-                            <label for=""> Specialization <em> *</em></label>
-                                    {{ form_data.last_name }}
-                            {% comment %} <input type="text" placeholder=" Enter Your Gender" > {% endcomment %}
-                        </div>
                     </div> 
-                                <div class="buttons">
-                                    <button class="nextBtn">Register</button>
-                            </div>
-                    </div>
-                </div>
-        </form> 
-    </div>
-{% endblock  %}
 
-<!--  
-          {% comment %} <div >
+                    <div class="fields">
+                        <div class="input-fields">
+                              <label for="">Username <em>*</em></label>
+                                 {{ form_data.username }}
+                              {% comment %} <input type="text" placeholder="Enter Your Last Name" > {% endcomment %}
+                        </div>
+                  </div> 
+
+                    <div class="fields">
+                        <div class="input-fields">
+                              <label for="">Email <em>*</em></label>
+                                  {{ form_data.email }}
+                              {% comment %} <input type="email" placeholder=" Your birth Email " > {% endcomment %}
+                        </div>
+                   </div>
+
+                  <div class="fields">
+                        <div class="input-fields">
+                            <label for="">Password <em>*</em></label>
+                                 {{ form_data.password1 }}
+                            {% comment %} <input type="password" placeholder=" Password" >  {% endcomment %}
+                        </div>
+                  </div>
+    
+              <div class="fields">
+                  <div class="input-fields">
+                        <label for="">Confirm Password <em>*</em></label>
+                             {{ form_data.password2 }}
+                        {% comment %} <input type="text" placeholder=" Confirm Password" > {% endcomment %}
+                  </div>
+             </div>
+
+            <div class="fields">
+                  <div class="input-fields">
+                      <label for="">Gender  <em> *</em></label>
+                      <input type="text" placeholder=" Enter Your Gender" >
+                  </div>
+            </div>
+ 
+          <div >
                <label for="" class="cv-file">Your CV <em>*</em></label>
                <div  class="file">
-                    {% comment %} {{ form_data.profile_img }}  
-                   <input type="file" >
+                    {{ form_data.profile_img }}
+                   {% comment %} <input type="file" > {% endcomment %}
               </div>
         </div>
     </div>
@@ -411,11 +370,11 @@
                         <button class="backBtn">Previous </button>
                         <button class="nextBtn">Next </button>
                  </div>
-           
+             -->
                 </div>
-            </div> <br> -->
+            </div> <br>
             <!-- third -->
-            <!-- <div class="form third"> 
+            <div class="form third"> 
                 <span class="title">Education </span>
                 <div class="details ID">
                 
@@ -446,7 +405,11 @@
                              
                     </textarea>
                     <span class="helper-text">(Introduction,Goals in life and what are you doing to reach your goals.)</span>
-                    
+                     <div class="buttons">
+                            <button class="nextBtn">Register</button>
+                    </div>
                 </div>
-            </div> -->
-          
+            </div>
+        </form>
+    </div>
+{% endblock  %}
