--- a/app/templates/Employer/registration.html
+++ b/app/templates/Employer/registration.html
@@ -1,12 +1,9 @@
 {% extends 'base.html'  %}
 {% load static %}
- {% block content %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Employer Form</title>
+ 
+
+    {% block 'title' %}  Employer Form {% endblock  %}
+    {% block 'style' %} 
     <style>
      *{
             margin:0;
@@ -14,8 +11,6 @@
             box-sizing: border-box;
             font-family: 'Nunito', sans-serif;
             scroll-behavior: smooth;
-           
-            
         }
         body {
             width: auto;
@@ -32,14 +27,15 @@
         }
 
         .container {
-         
-           position: relative;
+            min-height: 300px;
+            position: relative;
             min-width: 500px;
+            max-width: 600px;
             width: 80%;
             border-radius: 16px;
             padding: 30px;
-            margin:50px 100px ;
-            margin-left: 13%;
+            margin: 2% 30% ;
+            margin-left: auto;
             background-color: wheat;
         }
           /* .container:hover {
@@ -56,7 +52,9 @@
             font-weight: 600;
             color:navy;
             text-align: center;
-         
+          text-shadow: 1px 1px 10px white,
+    10px 0 60px  pink ,10px 0 100px dodgerblue,
+    0 0 100px rgb(255, 255, 255), 10px 0 100px darkblue; 
         }
         .container .benefits {
             display: flex;
@@ -68,8 +66,8 @@
             color: lightslategray;
         }
         .container form {
-        
-            min-height: 500px;
+        background:aliceblue
+          min-height: 400px;
              position:relative; 
             color:white;
             margin-top: 1rem;
@@ -113,6 +111,7 @@
             background-color: white;
         }
         .container .form {
+            color:aliceblue;
             display: inline;
             justify-content: center;
             align-items: center;
@@ -134,7 +133,9 @@
             margin: 15px 60px;
             border-radius: 5px;
             transition: all 0.3s linear;
-            cursor: pointer;
+            cursor: pointer; text-shadow: 1px 1px 10px white,
+            10px 0 60px  pink ,10px 0 100px dodgerblue,
+            0 0 100px rgb(255, 255, 255), 10px 0 100px darkblue; 
         }
 
         form button:hover {
@@ -142,8 +143,6 @@
             background-color: transparent;
             color:black;
         }
- 
-     
         form .button{
             margin-right: 14px;
         }
@@ -169,16 +168,6 @@
           height: 20px;
 
        }
-
-     
-
-
-
-
-
-
-
-
 
  @media  screen and ( max-width: 850px)  {
      .input-fields{
@@ -238,9 +227,6 @@
 
  }
 
-
-
-
  @media  screen and ( max-width: 750px)  {
      .input-fields{
         display:inline-flex;
@@ -268,67 +254,102 @@
 
  }
     </style>
-</head>
-<body>
+    {% endblock  %}
+
+{% block 'content' %}
+
     <div class="container"> 
         <header>Employer Registration</header>
+
+                    {% if messages %}
+            {% for message in messages %}
+          
+                <div class="alert {% if message.tags == 'success' %}alert-success{% elif message.tags == 'error' %}alert-error{% endif %}">
+                    {{ message }}
+                </div> 
+                
+            {% endfor %}
+        {% endif %} 
+
+        
         <div class="benefits">
-     
         <p>  Post Unlimited Jobs</p>
         <p>Access to Candidate's CV</p>
         <p>Send Messages to Candidate</p>
          <p>Free Registration for Employer</p>
         </div>
-
-
-                    <form action="">
+                    <form action=" {% url 'employer_registration' %}"  method = "POST">
+                        {% csrf_token %}
                             <div class="form"> 
             
                                 <div class="fields">
                                             <div class="input-fields">
                                                     <label for="">Your Full Name <em>*</em></label>
-                                                    <input type="text" placeholder="Enter Your First Name" required>
+                                                    {{form_data.first_name}}
+                                                    {% comment %} <input type="text" placeholder="Enter Your First Name" required> {% endcomment %}
                                             </div>
                                         </div> 
-                                        <div class="fields">
+                                <div class="fields">
+                                            <div class="input-fields">
+                                                    <label for="">Username<em>*</em></label>
+                                                    {{form_data.username}}
+                                                    {% comment %} <input type="text" placeholder="Enter Your First Name" required> {% endcomment %}
+                                            </div>
+                                        </div> 
+                                        {% comment %} <div class="fields">
                                             <div class="input-fields">
                                                     <label for="">Industry <em>*</em></label>
                                                     <input type="text" placeholder="Enter Your First Name" required>
                                             </div>
-                                        </div> 
+                                        </div>  {% endcomment %}
 
                                         <div class="fields">
                                             <div class="input-fields">
                                                 <label for="">Company Name <em>*</em></label>
-                                                <input type="text" placeholder="Enter Your Last Name" required>
+                                                    {% comment %} {{form_data.last_name}} {% endcomment %}
+
+                                                <input type="text" name="company"  placeholder="Enter Your Last Name" required>
                                             </div>
                                     </div> 
-                                     <div class="fields">
+                                     {% comment %} <div class="fields">
                                             <div class="input-fields">
                                                     <label for="">Contact No. <em>*</em></label>
                                                     <input type="number" placeholder=" Your Contact No." required>
                                                     <span class="helper-text">(Include your country code too)</span>
                                             </div>
                                     </div> 
-                                    
-                                        <div class="fields">
+                                     {% endcomment %}
+                                        {% comment %} <div class="fields">
                                                 <div class="input-fields">
                                                         <label for="">Location <em>*</em></label>
                                                         <input type="text" placeholder=" Your Location" required>
                                                 </div>
-                                        </div>
+                                        </div> {% endcomment %}
 
                                         <div class="fields">
                                             <div class="input-fields">
                                                 <label for="">Email <em>*</em></label>
-                                                <input type="email" placeholder=" Your birth Email " required>
+                                                    {{form_data.email}}
+
+                                                {% comment %} <input type="email" placeholder=" Your birth Email " required> {% endcomment %}
                                             </div>
                                     </div>
 
                                     <div class="fields">
                                             <div class="input-fields">
                                                 <label for="">Password <em>*</em></label>
-                                                <input type="password" placeholder=" Password" required>
+                                                    {{form_data.password1}}
+
+                                                {% comment %} <input type="password" placeholder=" Password" required> {% endcomment %}
+                                            </div>
+                                    </div>
+                                    
+                                    <div class="fields">
+                                            <div class="input-fields">
+                                                <label for="">Confirm Password <em>*</em></label>
+                                                    {{form_data.password2}}
+
+                                                {% comment %} <input type="password" placeholder=" Password" required> {% endcomment %}
                                             </div>
                                     </div>
                                     <div class="checks">
@@ -356,7 +377,4 @@
                         </div>
             </form>
    </div>
-
-</body>
-</html>
 {% endblock %}
