--- a/app/templates/_navbar.html
+++ b/app/templates/_navbar.html
@@ -1,3 +1,4 @@
+{% load static %}
 <style>
     .navbar{
     width: 100%;
@@ -5,8 +6,6 @@
    display: flex;
     justify-content: space-between;
     position:relative;
-   
-   
     padding: 1rem 2.5rem;
     z-index: 10;
     /* color: var(--whiteColor); */
@@ -18,18 +17,21 @@
     margin-top: -13px;
     letter-spacing: px;
     /* text-decoration: none; */
-    color: white;
+    color: steelblue;
     /* color:#0076de; */
     font-size: 2.6rem;
-    
+   
 } 
 .logo a {
     list-style: none;
     text-decoration: none;
-    
+    color: aliceblue;
+    text-shadow: 1px 1px 10px white,
+    10px 0 60px  pink ,10px 0 100px dodgerblue,
+    0 0 100px rgb(255, 255, 255), 10px 0 100px darkblue; 
 }
 .logo a:hover{
-     color:white;
+     color:steelblue;
 
 }
 .menu li , .menu a {
@@ -38,25 +40,28 @@
     /* color: white; */
     text-decoration: none;
      color:white;
+     
 }
 .menu{
     width: 100%;
-    /* min-width: 150px; */
+    max-width: 70%;
+    min-width: 150px;
     margin:0;
     display: inline-flex;
     flex-direction: row;
     text-align: center;
+    
     cursor: pointer;
     /* background-color: wheat; */
   
 }
 .menu ul{
-  
+    width: 100%;
     cursor: pointer;
-    margin-left:20px;
+   
     display: flex;
     position: relative;
-   width:calc(80%/1 - 15px);
+    
    /* background-color: lightblue; */
 
 }
@@ -103,7 +108,9 @@
      
             visibility: visible;
             opacity: 1;
-            top: 1rem;
+            top: 0.8rem;
+            cursor: pointer;
+          
         }
 
         .menu .drop-hover li{
@@ -119,6 +126,7 @@
         } 
         .drop-hover li a {
             color:black;
+            
         }
 
         .menu .drop-hover li:hover{
@@ -140,22 +148,7 @@
     top: 60%; /* Adjusted 
     transition: all .3s linear;
 } */
-.menu .drop-hover1 {
-    position: absolute;
-    left: 80%;
-    transform: translateX(-50%);
-    background-color: wheat;
-    height: auto;
-    min-width: 50px;
-  /* Initially hide the dropdown */
-    flex-direction: column;
-    align-items: center;
-    padding: 2rem 1rem;
-    gap: 2rem;
-    top: 60%; /* Adjusted */
-    transition: all .3s linear;
-    margin:20px;
-}
+
 /* .menu a::after{
     content:' ';
    position:absolute;
@@ -186,28 +179,24 @@
    display: flex;
     display: inline-block;
     transition: bottom 0.5s ease;
-
-    
 } */
 /* .menu a:hover{
-   
-
-
 } */
-
-
-
-
     /* box-shadow: 25px 25px 75px rgba(0,0,0,0.25),
   10px 10px 70px rgba(0,0,0,0.25),
   inset 5px 5px 10px rgba(0,0,0,0.5),
   inset 5px 5px 20px rgba(255,255,255,0.2),
   inset -5px -5px 15px rgba(0, 0, 0, 0.75); */
 
-
  svg{
     display: none;
   
+}
+.menu .profile-pic {
+    height: 50px;
+    width: 50px;
+   border-radius: 50%;
+    margin-top: -17px;
 }
 /* @media screen and ( max-width:400px) {
      .navbar {
@@ -225,10 +214,10 @@
          top:0;
         right: 0;
         height: 100vh;
-    
-        width: 300px;
+       width: 300px;
+       
         z-index: 999;
-        background: transparent;
+        background: steelblue;
         color: black;
         backdrop-filter: blur(10px);
         display: none;
@@ -254,7 +243,7 @@
 .menu ul li {
     color:black;
     margin:5px;
-    background-color:aliceblue;
+    background-color: steelblue;
     font-size: 1.5rem;
     line-height: -20px;
     gap: -20px;
@@ -264,30 +253,57 @@
     /* background-color: black; */
 }
 .menu ul li a:hover {
-   color:black
+   color:black;
+
 }
 .drop-hover {
-
-      position:absolute ;
+        position:absolute ;
           top:0;
           padding:0;
             transform: translateX(-50%);
             /* background-color: darkblue; */
             height: auto;
-            min-width: 200px;
+            min-width: 190px;
           display: flex;
           opacity: 1;
+          line-height: 1.2rem;
             flex-direction: column;
             align-items: center;
            left:37%;
-         
             transition: all .3s linear;
-             color:black;
-             background-color: transparent;
+             background-color: steelblue;
 }
-.drop-hover li,a {
-    background-color: transparent;
+.drop-hover li,.drop-hover a{
+    background-color: steelblue;
+    color:aliceblue;
 
+}
+ .menu .drop-hover li{
+         padding:0px;
+            height: 1rem;
+            line-height: 1rem;
+            width: 100%;
+            text-align: center;
+            transition: all .3s linear;
+            /*border: 1px solid red;*/
+       
+            font-size: 1rem;
+        } 
+        .drop-hover li a {
+            color: white;
+            } 
+              .menu .drop-hover li:hover{
+           background-color: transparent;
+        }
+          .menu .drop-hover li a:hover{
+            border-bottom: 1px solid black;
+            }
+
+        .menu .profile-pic {
+        height: 50px;
+        width: 50px;
+        clip-path: circle(50%);
+        margin-top: 7px;
 }
      svg{
         width: 40px;
@@ -299,17 +315,12 @@
         justify-content: flex-end;
         align-items:flex-end;
     }
-} 
-
-   
-
 
 .menu li , .menu a {
     margin: 0;
     list-style: none;
-    color: white; 
+    color: black; 
     text-decoration: none;
-     color:white;
 }
 
  /*.menu{
@@ -380,8 +391,8 @@
         /* border-bottom: 1px solid black; 
         color: white;
         /* border: 1px solid violet; 
-        border-radius: 10px;
-    } */
+        border-radius: 10px;*/
+} 
    
 
 
@@ -393,7 +404,7 @@
         <div class="menu">
             <div  onclick=" hideSidebar()"><svg xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30">
                 <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>  </div>
-                <ul>
+                <ul >
                         <li>     <a href="{% url 'home' %}" > HOME</a>  </li> 
                      <li> <a href="#" > JOBS </a> 
                          <ul class="drop-hover">
@@ -407,6 +418,7 @@
                        
                          <li>     <a href="" > BLOGS</a> </li>
                            <li>   <a href="{% url 'home' %}" > CONTACT US</a> </li>
+                           {% if  not user.is_authenticated %} 
                              <li>   <a href="" > REGISTER</a>
                                 <ul class="drop-hover">
                                    <li> <a href="{% url 'employer_registration' %}"> EMPLOYER</a></li>
@@ -418,7 +430,19 @@
                                    <li> <a href="{% url 'employer_login' %}"> EMPLOYER</a></li>
                                    <li> <a href="{% url 'candidate_login' %}"> CANDIDATE</a></li>
                                 </ul>
+                            </li>{% endif %}
+                            {% if user.is_authenticated %}
+                          
+                            <li>
+                                <img class="profile-pic" src="https://static.vecteezy.com/system/resources/previews/005/544/718/non_2x/profile-icon-design-free-vector.jpg" alt=" Profile">
+                                <ul class="drop-hover">
+                                    <li><a href=""> Profile</a></li>
+                                    <li><a href="{% url 'edit_user' %}"> Edit Profile</a></li>
+                                    <li><a href=""> Change Password</a></li>
+                                    <li><a href="{% url 'candidate_logout' %} "> Logout</a></li>
+                                </ul>
                             </li>
+                            {% endif %}
                  </ul> 
       </div>
                    <div class="showSidebar" onclick="showSidebar()"> 
