--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,33 +1,38 @@
-   {% extends 'base.html'  %}
+{% extends "base.html" %}
 {% load static %}
- {% block content %}
-<!DOCTYPE html>
+{% comment %} <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="./main.css"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> {% endcomment %}
+    {% comment %} <link rel="stylesheet" href="./main.css"> {% endcomment %}
                             <!-- fonts -->
              <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
               <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
             <link href="https://fonts.googleapis.com/css2?family=Nunito:ital@1&family=Satisfy&display=swap" rel="stylesheet">
                <!-- Icons -->
           <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
           <!-- <link rel="stylesheet" href="./main.css"> -->
           <!-- swiper -->
           <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+          
          
-           <link rel="stylesheet" href="{% static 'css/main.css' %} ">
-          <link rel="stylesheet" href="{%  static 'js/main.js'  %} ">
-    <title>Responsive Website</title>
-
-</head>
-<body>
+    {% block 'title' %}  Responsive Website {% endblock  %}
+    {% block 'style' %} 
     
-    {% comment %} <!-- navbar -->
-    <nav class="navbar">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    {% endblock  %}
+
+    {% block 'content' %} 
+
+{% comment %} </head>
+<body>
+     {% endcomment %}
+  <!-- navbar -->
+    <!-- <nav class="navbar">
         <h1 class="logo"><a href="#">   Ahtisham   </a></h1>
-        <!-- <h1 class="logo">Suffah</h1> -->
+        <!-- <h1 class="logo">Suffah</h1> 
         <div class="menu">
             <ul  onclick=" hideSidebar()"><svg xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30">
                 <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>  </ul>
@@ -38,7 +43,7 @@
                                         <a href="#" > Sign In</a>
       </div>
                    <div class="showSidebar" onclick="showSidebar()"> 
-                        <!-- <i class="fa-solid fa-bars"></i> -->
+                        <!-- <i class="fa-solid fa-bars"></i> 
                         <svg xmlns="http://www.w3.org/2000/svg" height="28" viewBox="0 -960 960 960" width="28"> 
                        <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg> 
                   </div>
@@ -48,9 +53,9 @@
                             <span class="bar"></span>
                      </div>
     </nav>
- {% endcomment %}
 
-        {% comment %} <nav class="navbar">
+
+        <nav class="navbar">
             <div class="container">
             <div> <h1 class="logo">ALLAH</h1>  </div>
             <ul >
@@ -80,9 +85,9 @@
                 </li>
             </ul>
         </div>
-    </nav>  {% endcomment %}
+    </nav>  -->
              <!-- header -->
-             <header>
+             <header id="header">
                 <h2 class="header-title">
                     FIND YOUR <br> <span> PERFECT JOB</span><br> EASILY
                 </h2>
@@ -136,18 +141,18 @@
                             </select>
                  </div>
                  <div class="filter-chosen">
-                        <div class="chosen-card">
-                            Remote <i class="fas fa-times-circle"></i>
-                        </div>
-                        <div class="chosen-card">
-                            Full time <i class="fas fa-times-circle"></i>
-                        </div>
-                        <div class="chosen-card">
-                            Financial Tech <i class="fas fa-times-circle"></i>
-                        </div>
-                        <div class="chosen-card">
-                            Entry Level  <i class="fas fa-times-circle"></i>
-                        </div>
+                        <!-- <div class="chosen-card"> -->
+                            <!-- Remote <i class="fas fa-times-circle"></i> -->
+                        <!-- </div> -->
+                        <!-- <div class="chosen-card"> -->
+                            <!-- Full time <i class="fas fa-times-circle"></i> -->
+                        <!-- </div> -->
+                        <!-- <div class="chosen-card"> -->
+                            <!-- Financial Tech <i class="fas fa-times-circle"></i> -->
+                        <!-- </div> -->
+                        <!-- <div class="chosen-card"> -->
+                            <!-- Entry Level  <i class="fas fa-times-circle"></i> -->
+                        <!-- </div> -->
                  </div>
              </div>
              <!-- job listing -->
@@ -518,8 +523,8 @@
         </div>
      </div>
 </section>
-     {% comment %} <!-- footer -->
-<footer>
+   <!-- footer -->
+  <!-- {% comment %} <footer>
     <div class="row">
         <div class="col">
              <h4>Quick Links</h4>
@@ -567,7 +572,7 @@
                 <i class="far fas fa-envelope"></i>
                 <input type="email" placeholder="Enter Your Email ">
                 <button type="submit"><i class="fas fa-arrow-right"></i></button>
-           </form>      -->
+           </form>      
             <div class="social-icons">
                <a href=""> <i class="fa-brands fa-facebook-f"></i></a> 
               <a href=""> <i class="fa-brands fab fa-youtube"></i></a>
@@ -577,18 +582,11 @@
         </div>
    
  </div>
-</footer> {% endcomment %}
-
-
-
-
-
+</footer> {% endcomment %} -->
 
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <!-- <script src="./main.js"></script> -->
-    <script src="{% static 'js/main.js' %}"> </script>
+    {% comment %} <script src="./main.js"></script> {% endcomment %}
+     <script src="{% static 'js/main.js' %}"> </script> 
     
-</body>
-</html>
-{% endblock %}
+{% endblock  %}
