--- a/app/templates/Candidate/login.html
+++ b/app/templates/Candidate/login.html
@@ -1,35 +1,31 @@
 {% extends 'base.html'  %}
 {% load static %}
-{% block content %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Candidate Login Form</title>
+  {% block 'title' %}  Candidate Login Form {% endblock  %}
+    {% block 'style' %}
 <style>
-  body {
-    overflow-x: hidden;
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding:0;
-    box-sizing: border-box;
-  
+   *{
+            margin:0px;
+            padding:0;
+            box-sizing: border-box;
+            font-family: 'Nunito', sans-serif;
+            scroll-behavior: smooth;
+            
+        }
+        body {
+            width: 100%;
+            height:100%;
+           overflow-x: hidden;
+          background-color: aliceblue;
+        }
    
-  }
   .container {
-    display: flex;
-   align-items: center;
-    min-width: 400px;
-    min-height: 209px;
-    padding: 30px;
-    margin-left: 4%;
-    margin-bottom: 2%;
-
- 
-    border-radius: 10px;
-     background-color: wheat;
+     position: relative;
+           
+            max-width: 500px;
+            border-radius: 16px;
+            padding: 30px;
+            margin:50px auto ;
+            background-color: wheat;
    
   }
    /* .container:hover {
@@ -45,16 +41,16 @@
     margin-bottom: 20px;
   }
 
-  .form-group label {
+  form .form-group label {
     display: block;
     font-size: 1.4rem;
     font-weight: 600;
   }
 
-  .form-group input {
+  form .form-group input {
     display: flex;
+    width: 100%;
     min-width: 300px;
-    
     padding: 10px ;
    border: none;
    outline: none;
@@ -74,20 +70,22 @@
     border-color: dodgerblue;
   }
 
-  .btn {
-
-    display: block;
-   
-    padding: 8px;
-    border: none;
-    border-radius: 5px;
-    background-color: dodgerblue;
-    color: #fff;
-    font-size: 1.3rem;
-    cursor: pointer;
-    transition:  all 0.3s ;
-    margin-top: 0.6rem;
-    margin-left:0.8rem ;
+   form .btn {
+     display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 45px;
+            min-width: 200px ;
+            width:100%;
+            background-color: #4070f4;
+            outline: none;
+            border: none;
+            font-size: 1.5rem;
+            color: white;
+            margin: 25px 9px;
+            border-radius: 5px;
+            transition: all 0.3s linear;
+            cursor: pointer;
   }
 
   .btn:hover {
@@ -95,10 +93,7 @@
     border: 1px solid dodgerblue;
     color:black;
   }
-
-  /* Wavy background animation */
- 
-.heading {
+.login-logo {
     position:relative;
     display: flex;
     justify-content: center;
@@ -124,6 +119,32 @@
 .forget-register a:hover {
     color:dodgerblue;
 }
+
+ /* Success message */
+.alert-success {
+   font-size: 1.2rem;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-weight: lighter;
+    height: 40px;
+    color: #155724;  /* Text color */
+    background-color: #d4edda;  /* Background color */
+    border-color: #c3e6cb;  /* Border color */
+}
+
+/* Error message */
+.alert-error {
+    font-size: 1.2rem;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-weight: lighter;
+    height: 40px;
+    color: #ff0820;  /* Text color */
+    background-color: #f8d7da;  /* Background color */
+    border-color: #f5c6cb;  /* Border color */
+}
 @media screen and (max-width=400px) {
     .container {
         margin: 0.5rem;
@@ -132,11 +153,22 @@
 }
   
 </style>
-</head>
-<body>
-    <h1 class="heading">Candidate Login</h1>
+{% endblock  %}
+
+{% block 'content' %}
+    <h1 class="login-logo">Candidate Login</h1>
 <div class="container">
-        <form>
+  {% if messages %}
+            {% for message in messages %}
+          
+                <div class="alert {% if message.tags == 'success' %}alert-success{% elif message.tags == 'error' %}alert-error{% endif %}">
+                    {{ message }}
+                </div> 
+                
+            {% endfor %}
+        {% endif %}
+        <form action="{% url 'candidate_login' %}" method = "POST" >
+          {% csrf_token %}
                 <div class="form-group">
                         <label for="username">Username</label>
                         <input type="text" id="username" name="username" placeholder="Enter your username" required>
@@ -156,6 +188,4 @@
                 </div>
         </form>
 </div>
-</body>
-</html>
 {% endblock %}
